# rusthesaurus

./: .gitignore  Cargo.toml  ZipGraph.prg
combinatio/: Cargo.toml
combinatio/src/: main.rs
combinatio/src/widgets/: lines_counter.rs  mod.rs  p01_lines_counter.rs  p02_year_days_vec_generator.rs  p03_tushare_single_reqwest.rs  p04_deserialize_tushare_daily_data.rs  p04_deserialize_tushare_data.rs  p05_analyze_tushare_data.rs
essentia/: Cargo.toml
essentia/src/: main.rs
essentia/src/test_of_those/: mod.rs  n00_introduction.rs  n01_helloworld.rs  n02_primitives.rs  n03_custom_types.rs  n04_variable_bindings.rs  n05_types.rs  n06_conversion.rs  n07_expressions.rs  n09_functions.rs  n09_hof.rs
uactix_web/: Cargo.toml
uactix_web/src/test_of_those/: alpha_actix_server.rs  mod.rs
uaxum/: Cargo.toml
uaxum/src/: main.rs
uaxum/src/test_of_those/: alpha_test_server.rs  mod.rs
ufutures/: Cargo.toml
ufutures/src/: main.rs
uleptos_csr/: Cargo.toml  Trunk.toml  index.html
uleptos_csr/public/: 20231029_132236_L1001682.avif
uleptos_csr/src/: main.rs
uleptos_csr/src/app_with_router/: app.rs  catsroutes.rs  mod.rs
uleptos_csr/src/appself/: app.rs
uleptos_csr/src/navigate_bar/: mod.rs  nvbar.rs
uleptos_csr/src/webpages/: mod.rs  x00_homepage.rs  x01_userpage.rs  x99_example.rs
uplotters/: Cargo.toml
upolars/: Cargo.toml
upolars/src/test_of_those/: mod.rs  n01_getting_started.rs
urand/: Cargo.toml
urand/src/: main.rs
urand/src/test_of_those/: mod.rs  simple_random_get.rs
urayon/: Cargo.toml
urayon/src/test_of_those/: mod.rs  rayon_example.rs
ureqwest/: Cargo.toml
ureqwest/src/test_of_those/: mod.rs  request_servo_org_webpage.rs  servo.html
urusqlite/: Cargo.toml
urusqlite/src/: main.rs
uscreencapturekit/: Cargo.toml
uscreencapturekit/src/: main.rs
usqlx/: Cargo.toml
usqlx/src/: main.rs
usurrealdb/: Cargo.toml
usurrealdb/src/: main.rs
usurrealdb/src/test_of_those/: mod.rs  n01_kv_mem_sdb.rs
utokio/: Cargo.toml
utokio/src/: main.rs
utokio/src/test_of_those/: mod.rs  n00_overview.rs  n01_interact_with_mini_redis.rs
vdayrecord/: 2511
