[workspace]
resolver = "2"
members = [
    "combinatio",
    "essentia",
    "uactix_web",
    "uaxum",
    "uleptos_csr",
    "uplotters",
    "upolars",
    "urand",
    "urayon",
    "ureqwest",
    "usqlx",
    "usurrealdb",
    "utokio"
]

[workspace.package]
edition = "2024"
rust-version = "1.91.0"

[workspace.dependencies]
tokio       = { default-features = false, version = "1.48" }
rayon       = { default-features = false, version = "1.11" }
reqwest     = { default-features = false, version = "0.12" }
polars      = { default-features = false, version = "0.51" }
sqlx        = { default-features = false, version = "0.8" }
surrealdb   = { default-features = false, version = "2.3" }
plotters    = { default-features = false, version = "0.3" }
axum        = { default-features = false, version = "0.8" }
actix-web   = { default-features = false, version = "4.12" }

#[leptos-csr]
leptos              = { default-features = false, version = "0.8" }
leptos_router       = { default-features = false, version = "0.8" }
leptos_router_macro = { default-features = false, version = "0.8" }
leptos_meta         = { default-features = false, version = "0.8" }
console_error_panic_hook    = { default-features = false, version = "0.1" }

#[rand]
rand        = { default-features = false, version = "0.9" }
rand_distr  = { default-features = false, version = "0.5" }

#[serde]
serde       = { default-features = false, version = "1.0.228" }
serde_json  = { default-features = false, version = "1.0.145" }

walkdir     = { default-features = false, version = "2.5" }
chrono      = { default-features = false, version = "0.4" }
image       = { default-features = false, version = "0.25" }
mini-redis  = { default-features = false, version = "0.4" }
