[workspace]
resolver = "2"
members = [
    "combinatio",
    "essentia",
    "uactix_web",
    "uaxum",
    "ufutures",
    "uleptos_csr",
    "uplotters",
    "upolars",
    "urand",
    "urayon",
    "ureqwest",
    "uscreencapturekit",
    "usqlx",
    "usurrealdb",
    "utokio"
]

[workspace.package]
edition = "2024"
rust-version = "1.93.0"

[workspace.dependencies]
#[Asynchronous & Concurrent & Parallel]
futures     = { default-features = false, version = "0.3" }
tokio       = { default-features = false, version = "1.48" }
rayon       = { default-features = false, version = "1.11" }
#[database]
sqlx        = { default-features = false, version = "0.8" }
sqlx-macros = { default-features = false, version = "0.8" }
surrealdb   = { default-features = false, version = "2.5" }
#[backend]
axum        = { default-features = false, version = "0.8" }
actix-web   = { default-features = false, version = "4.12" }
#[polars]
polars = { version = "0.51", features = ["lazy", "temporal", "dtype-date", "fmt"] }
#[leptos-csr]
leptos              = { default-features = false, version = "0.8" }
leptos_router       = { default-features = false, version = "0.8" }
leptos_router_macro = { default-features = false, version = "0.8" }
leptos_meta         = { default-features = false, version = "0.8" }
console_error_panic_hook    = { default-features = false, version = "0.1" }
#[rand]
rand        = { default-features = false, version = "0.9" }
rand_distr  = { default-features = false, version = "0.5" }
#[net request & serde]
reqwest     = { default-features = false, version = "0.12" }
serde       = { default-features = false, version = "1.0.228" }
serde_json  = { default-features = false, version = "1.0.145" }
#[draw a chart]
plotters    = { default-features = false, version = "0.3" }

walkdir     = { default-features = false, version = "2.5" }
chrono      = { default-features = false, version = "0.4" }
image       = { default-features = false, version = "0.25" }
mini-redis  = { default-features = false, version = "0.4" }
uuid        = { default-features = false, version = "1.19" }
regex       = { default-features = false, version = "1.12" }

# Full Compile Time -- FCT
# 3m 53s on 2025.12.22  @MBP M1PRO
# 3m 54s on 2026.1.24   @MBP M1PRO
# 2m 52s on 2026.2.5    @MBP M2MAX
