[package]
name = "combinatio"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
walkdir = { workspace = true }
rayon = { workspace = true }

reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }

polars = { workspace = true, features = ["lazy", "fmt"] }
