[package]
name = "uleptos_csr"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true }
leptos_router_macro = { workspace = true }
leptos_meta = { workspace = true }

console_error_panic_hook = { workspace = true }

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"
codegen-units = 1
panic = "abort"
